# Spider

Spider/: BD.cpp  BD.h  CMakeLists.txt  Indexator.cpp  Indexator.h  Spider.cpp  Spider.h  TaskManager.cpp  TaskManager.h  ThreedPool.cpp  ThreedPool.h  URLQueue.cpp  URLQueue.h  ini_parser.cpp  ini_parser.h  main.cpp  test.txt
